--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -37,6 +37,20 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "\"Hola mundo\"\n",
+        "print (\"Hola mundo\")\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "kRbPzd6jDqKb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# Introducción a Python\n",
@@ -58,24 +72,6 @@
       "metadata": {
         "id": "Yugfb3fCOYY9"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "vyomaw1fApmu"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "paz5LG3RAqY7"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -108,7 +104,11 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "\"hola mundo\"\n",
+        "print(\"hola mundo\")\n",
+        "\n"
+      ],
       "metadata": {
         "id": "0qZX8_ZQBYyk"
       },
@@ -117,7 +117,11 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# prompt: print (\"hola mundo\")\n",
+        "\n",
+        "print(\"hola mundo\")\n"
+      ],
       "metadata": {
         "id": "GLMzF_AKBY7a"
       },
@@ -159,9 +163,32 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "edad = 42\n",
+        "print(id(edad))\n",
+        "\n",
+        "\n"
+      ],
       "metadata": {
         "id": "vsHh5buZADND"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "66pR4SPTE-bO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "fD3D0VlcEw6X"
       },
       "execution_count": null,
       "outputs": []
