--- a/AluraStoreLatam_(1).ipynb
+++ b/AluraStoreLatam_(1).ipynb
@@ -67,7 +67,7 @@
         "outputId": "bd32e3e3-c854-4f69-c60d-ce5cbe8f03da",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 379
+          "height": 293
         }
       },
       "execution_count": 10,
@@ -612,10 +612,10 @@
       ],
       "metadata": {
         "id": "_04om0XEJbTS",
-        "outputId": "de34a037-512e-42c3-b75a-c05b08c3b746",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "de34a037-512e-42c3-b75a-c05b08c3b746"
       },
       "execution_count": 14,
       "outputs": [
@@ -668,10 +668,10 @@
       ],
       "metadata": {
         "id": "uIfTub9C2Ecx",
-        "outputId": "602a7f5d-d1ac-4c38-9fee-e88568054eeb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "602a7f5d-d1ac-4c38-9fee-e88568054eeb"
       },
       "execution_count": 16,
       "outputs": [
@@ -694,10 +694,10 @@
       ],
       "metadata": {
         "id": "SNG_Y_Wu2GQF",
-        "outputId": "c05591b7-f6cb-4dee-b60e-2afc43eaf7bc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c05591b7-f6cb-4dee-b60e-2afc43eaf7bc"
       },
       "execution_count": 17,
       "outputs": [
@@ -720,10 +720,10 @@
       ],
       "metadata": {
         "id": "GWyDVKE82gr_",
-        "outputId": "03409023-cc97-4f0e-92e6-b522baf58e3f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "03409023-cc97-4f0e-92e6-b522baf58e3f"
       },
       "execution_count": 18,
       "outputs": [
@@ -761,10 +761,10 @@
       ],
       "metadata": {
         "id": "SFe7NzMZ2hJS",
-        "outputId": "86514961-e959-4707-c6b9-89f10c22a4c2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "86514961-e959-4707-c6b9-89f10c22a4c2"
       },
       "execution_count": 19,
       "outputs": [
@@ -802,10 +802,10 @@
       ],
       "metadata": {
         "id": "-z0NcFpt2hMl",
-        "outputId": "123c04a1-e193-487d-b755-1b3ff74321a2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "123c04a1-e193-487d-b755-1b3ff74321a2"
       },
       "execution_count": 20,
       "outputs": [
@@ -854,11 +854,11 @@
       ],
       "metadata": {
         "id": "c0J-ZkO_s0lT",
-        "outputId": "68c39449-bbcf-47ec-ef54-5d450ff1bbb8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 310
-        }
+        },
+        "outputId": "68c39449-bbcf-47ec-ef54-5d450ff1bbb8"
       },
       "execution_count": 22,
       "outputs": [
@@ -1240,11 +1240,11 @@
       ],
       "metadata": {
         "id": "iVbXRAHdnsXc",
-        "outputId": "b8978988-7e2d-4370-ef7a-92f133bcc3e4",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 414
-        }
+          "height": 310
+        },
+        "outputId": "b8978988-7e2d-4370-ef7a-92f133bcc3e4"
       },
       "execution_count": 24,
       "outputs": [
@@ -1633,11 +1633,11 @@
       "execution_count": 26,
       "metadata": {
         "id": "T3EvaeQ_INIL",
-        "outputId": "008ac23e-356f-4ef2-8d69-616f2e995b32",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 379
-        }
+          "height": 293
+        },
+        "outputId": "008ac23e-356f-4ef2-8d69-616f2e995b32"
       },
       "outputs": [
         {
@@ -2022,10 +2022,10 @@
       ],
       "metadata": {
         "id": "TX4uKKpnDQrN",
-        "outputId": "4fca618a-2f88-4418-e783-4c1a49d67963",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4fca618a-2f88-4418-e783-4c1a49d67963"
       },
       "execution_count": 27,
       "outputs": [
@@ -2156,6 +2156,33 @@
           },
           "metadata": {},
           "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ingreso_total_cuatro_tiendas = sum(tiendaA[\"Precio\"]) + sum(tiendaB[\"Precio\"]) + sum(tiendaC[\"Precio\"]) + sum(tiendaD[\"Precio\"])\n",
+        "ingreso_total_cuatro_tiendas"
+      ],
+      "metadata": {
+        "id": "AxXLkZ2utMq7",
+        "outputId": "9c6d23c0-d02a-4bbb-ff81-7c9dac17d1ae",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4403619200.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
         }
       ]
     },
@@ -2577,109 +2604,149 @@
       "cell_type": "code",
       "source": [
         "calificacion_tiendaA = (sum(tiendaA[\"Calificación\"])) / len(tiendaA[\"Calificación\"])\n",
+        "calificacion_tiendaA = round(calificacion_tiendaA, 3)\n",
         "calificacion_tiendaA"
       ],
       "metadata": {
         "id": "bh3jjjJwY5MU",
-        "outputId": "cedf4878-3074-4cf0-991f-9fdf3fd21c2c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f8d8f21b-994f-474d-f4d1-dff8f9071bac"
       },
-      "execution_count": 36,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "3.976685036032217"
+              "3.977"
             ]
           },
           "metadata": {},
-          "execution_count": 36
+          "execution_count": 48
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "IXJc04qyvr_6"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "calificacion_tiendaB = (sum(tiendaB[\"Calificación\"])) / len(tiendaB[\"Calificación\"])\n",
+        "calificacion_tiendaB = round(calificacion_tiendaB, 3)\n",
         "calificacion_tiendaB"
       ],
       "metadata": {
         "id": "I0KkjPoTY88F",
-        "outputId": "72dae835-5385-41df-dbdf-ed5d1f0ed649",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f2f297a8-221c-434f-f2c3-54dc0a1a52b0"
       },
-      "execution_count": 37,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "4.037303942348453"
+              "4.037"
             ]
           },
           "metadata": {},
-          "execution_count": 37
+          "execution_count": 47
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "AQp__xy6vt59"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "calificacion_tiendaC = (sum(tiendaC[\"Calificación\"])) / len(tiendaC[\"Calificación\"])\n",
+        "calificacion_tiendaC = round(calificacion_tiendaC, 3)\n",
         "calificacion_tiendaC"
       ],
       "metadata": {
         "id": "8nqRY6H7Drqy",
-        "outputId": "549cf8dd-5546-4635-ce2c-8c2c4065f2b1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "05567882-3680-4e28-bb0d-8666dad7d515"
       },
-      "execution_count": 38,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "4.048325561678677"
+              "4.048"
             ]
           },
           "metadata": {},
-          "execution_count": 38
+          "execution_count": 50
         }
       ]
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "RCDhBCKgvuyN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [
         "calificacion_tiendaD = (sum(tiendaD[\"Calificación\"])) / len(tiendaD[\"Calificación\"])\n",
+        "calificacion_tiendaD = round(calificacion_tiendaD, 3)\n",
         "calificacion_tiendaD"
       ],
       "metadata": {
         "id": "Sof_ZkMgDr54",
-        "outputId": "ea0b37c1-0435-41b9-b2fd-a40f0e386dfc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3dd3501d-eef0-4f41-e300-413ae54e0c14"
       },
-      "execution_count": 39,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "3.9957591178965224"
+              "3.996"
             ]
           },
           "metadata": {},
-          "execution_count": 39
+          "execution_count": 52
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "aw6dYw-5vwY9"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -2697,10 +2764,10 @@
       ],
       "metadata": {
         "id": "1Xiwtxb5NJ0k",
-        "outputId": "a6c633f5-9458-4f5b-d0f0-18afc762bebb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a6c633f5-9458-4f5b-d0f0-18afc762bebb"
       },
       "execution_count": 40,
       "outputs": [
@@ -2738,11 +2805,11 @@
       ],
       "metadata": {
         "id": "qoyjqijQZHfF",
-        "outputId": "a9f7e4c7-688f-4df5-d111-0c7cda165f63",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "a9f7e4c7-688f-4df5-d111-0c7cda165f63"
       },
       "execution_count": 41,
       "outputs": [
