--- a/AluraStoreLatam_(1).ipynb
+++ b/AluraStoreLatam_(1).ipynb
@@ -2166,11 +2166,11 @@
         "ingreso_total_cuatro_tiendas"
       ],
       "metadata": {
-        "id": "AxXLkZ2utMq7",
-        "outputId": "9c6d23c0-d02a-4bbb-ff81-7c9dac17d1ae",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "AxXLkZ2utMq7",
+        "outputId": "9c6d23c0-d02a-4bbb-ff81-7c9dac17d1ae"
       },
       "execution_count": 46,
       "outputs": [
@@ -2630,15 +2630,6 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "IXJc04qyvr_6"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [
         "calificacion_tiendaB = (sum(tiendaB[\"Calificación\"])) / len(tiendaB[\"Calificación\"])\n",
         "calificacion_tiendaB = round(calificacion_tiendaB, 3)\n",
@@ -2664,15 +2655,6 @@
           "execution_count": 47
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "AQp__xy6vt59"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -2704,15 +2686,6 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "RCDhBCKgvuyN"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [
         "calificacion_tiendaD = (sum(tiendaD[\"Calificación\"])) / len(tiendaD[\"Calificación\"])\n",
         "calificacion_tiendaD = round(calificacion_tiendaD, 3)\n",
@@ -2738,15 +2711,6 @@
           "execution_count": 52
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "aw6dYw-5vwY9"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -3134,6 +3098,7 @@
       "cell_type": "code",
       "source": [
         "Promed_costo_de_envió_tiendaA = (sum(tiendaA[\"Costo de envío\"])) / len(tiendaA[\"Costo de envío\"])\n",
+        "Promed_costo_de_envió_tiendaA = round(Promed_costo_de_envió_tiendaA, 3)\n",
         "Promed_costo_de_envió_tiendaA"
       ],
       "metadata": {
@@ -3141,19 +3106,19 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0f511439-4751-4c04-adde-f0539e229628"
+        "outputId": "69bec62c-8654-4185-fcb4-228320aef449"
       },
-      "execution_count": 42,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "26018.60958033065"
+              "26018.61"
             ]
           },
           "metadata": {},
-          "execution_count": 42
+          "execution_count": 57
         }
       ]
     },
@@ -3161,6 +3126,7 @@
       "cell_type": "code",
       "source": [
         "Promed_costo_de_envió_tiendaB = (sum(tiendaB[\"Costo de envío\"])) / len(tiendaB[\"Costo de envío\"])\n",
+        "Promed_costo_de_envió_tiendaB = round(Promed_costo_de_envió_tiendaB, 3)\n",
         "Promed_costo_de_envió_tiendaB"
       ],
       "metadata": {
@@ -3168,19 +3134,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7og-UHa-EPVC",
-        "outputId": "40cde8d3-3e29-4a9f-bc86-4a324519dfb8"
+        "outputId": "06b115bf-dae5-4f44-905c-e8bf3932e9e3"
       },
-      "execution_count": 43,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "25216.235693090293"
+              "25216.236"
             ]
           },
           "metadata": {},
-          "execution_count": 43
+          "execution_count": 56
         }
       ]
     },
@@ -3188,6 +3154,7 @@
       "cell_type": "code",
       "source": [
         "Promed_costo_de_envió_tiendaC = (sum(tiendaC[\"Costo de envío\"])) / len(tiendaC[\"Costo de envío\"])\n",
+        "Promed_costo_de_envió_tiendaC = round(Promed_costo_de_envió_tiendaC, 3)\n",
         "Promed_costo_de_envió_tiendaC"
       ],
       "metadata": {
@@ -3195,19 +3162,19 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a9f5dbf3-7c1a-42df-d4df-1fc467bccd56"
+        "outputId": "59b60e69-416f-45f5-c489-df926be676cc"
       },
-      "execution_count": 44,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "24805.680373039424"
+              "24805.68"
             ]
           },
           "metadata": {},
-          "execution_count": 44
+          "execution_count": 58
         }
       ]
     },
@@ -3215,6 +3182,7 @@
       "cell_type": "code",
       "source": [
         "Promed_costo_de_envió_tiendaD = (sum(tiendaD[\"Costo de envío\"])) / len(tiendaD[\"Costo de envío\"])\n",
+        "Promed_costo_de_envió_tiendaD =round(Promed_costo_de_envió_tiendaD)\n",
         "Promed_costo_de_envió_tiendaD"
       ],
       "metadata": {
@@ -3222,19 +3190,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XQUpGYhxFl7G",
-        "outputId": "e30eae15-3cd4-4750-8d9d-625b531787a2"
+        "outputId": "bd7cdf11-03fa-41dc-8845-4e724ce90106"
       },
-      "execution_count": 45,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "23459.457167090754"
+              "23459"
             ]
           },
           "metadata": {},
-          "execution_count": 45
+          "execution_count": 59
         }
       ]
     },
