--- a/AluraStoreLatam_(1).ipynb
+++ b/AluraStoreLatam_(1).ipynb
@@ -2206,9 +2206,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 366
         },
-        "outputId": "0422f1bb-ecfd-4286-ca69-ac56c7d8bef9"
+        "outputId": "4273fc27-464a-4de4-ba80-9cc4896dbf19"
       },
-      "execution_count": 32,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2290,7 +2290,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 68
         }
       ]
     },
@@ -2305,9 +2305,9 @@
           "height": 366
         },
         "id": "n3yKsPfqsF_7",
-        "outputId": "06b1d6e0-25b0-4109-f7a2-f2a955387901"
+        "outputId": "761daf5b-667d-41cf-a8ca-45cd81a9de8b"
       },
-      "execution_count": 33,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2389,7 +2389,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 62
         }
       ]
     },
@@ -2404,9 +2404,9 @@
           "height": 366
         },
         "id": "Aw9NK9_tsGYi",
-        "outputId": "8bf48371-ed3a-4180-e016-c6f6e5fcbf3b"
+        "outputId": "ad045abd-bb0b-4495-aa9a-ab87db9bb092"
       },
-      "execution_count": 34,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2488,7 +2488,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 63
         }
       ]
     },
@@ -2503,9 +2503,9 @@
           "height": 366
         },
         "id": "XP8F72cwsGl8",
-        "outputId": "48754ceb-e6b6-41d8-d82b-f06a72ff0d08"
+        "outputId": "e66c7e4a-4e73-4884-a54a-0c28dd5999c7"
       },
-      "execution_count": 35,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2587,7 +2587,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 35
+          "execution_count": 64
         }
       ]
     },
@@ -3182,7 +3182,7 @@
       "cell_type": "code",
       "source": [
         "Promed_costo_de_envió_tiendaD = (sum(tiendaD[\"Costo de envío\"])) / len(tiendaD[\"Costo de envío\"])\n",
-        "Promed_costo_de_envió_tiendaD =round(Promed_costo_de_envió_tiendaD)\n",
+        "Promed_costo_de_envió_tiendaD =round(Promed_costo_de_envió_tiendaD, 3)\n",
         "Promed_costo_de_envió_tiendaD"
       ],
       "metadata": {
@@ -3190,19 +3190,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XQUpGYhxFl7G",
-        "outputId": "bd7cdf11-03fa-41dc-8845-4e724ce90106"
+        "outputId": "8ddb1be0-827d-4b25-a2f8-259bb603d378"
       },
-      "execution_count": 59,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "23459"
+              "23459.457"
             ]
           },
           "metadata": {},
-          "execution_count": 59
+          "execution_count": 60
         }
       ]
     },
